tests/NormalTests/paczka2/big_fuzzy/20085179.err
Error in line 5: A239 A64 42,5
Error in line 25: Y6VæL S96 56,8
Error in line 12: A239 S96 2,1
Error in line 46: K087oM1 S96 22,5
Error in line 15: jjEGz4L A264 55,0
Error in line 52: YJVcL S9J 251,J
Error in line 58: Y6VcL S96 13,6
Error in line 56: A239 S96 8,3
Error in line 60: A239 A239 30,4
Error in line 64: p29mC24 S96 126,5
Error in line 71: jaot7FSC A64 75,6
Error in line 75: Y6VcL A239 297,1
Error in line 76: Y6VcL A64 0,4
Error in line 77: jjEGz4L A239 88,1
Error in line 72: jaot7FSC A239 24,4
Error in line 95: jjEGz4L A264 72,6
Error in line 86: bbD0ReLYu A64 15,9
Error in line 104: jjEGz4L S96 51,7
Error in line 108: K087oM1 A64 431,6
Error in line 123: K087oM1 A239 96,1
Error in line 130: bbD0ReLYu A64 20,7
Error in line 163: K087oM1 A239 54,3
Error in line 164: K087oM1 A264 36,3
Error in line 168: K087oM1 A239 15,2
Error in line 174: jaot7FSC A239 51,1
Error in line 179: A2/9 A2/9 62,9
Error in line 173: Y6VcL S96 34,6
Error in line 182: p29mC24 S96 85,4
Error in line 215: Y6VcL A264 76,9
Error in line 217: A239 A264 12,4
Error in line 202: K087oM1 A239 5,1
Error in line 225: jaot7FSC A64 85,4
Error in line 226: K087oM1 A64 230,8
Error in line 227: jjEGz4L S96 277,0
